RESOLVED FIXED199571
[Pointer Events] "touch-action: none" does not prevent double-tap-to-zoom
https://bugs.webkit.org/show_bug.cgi?id=199571
Summary [Pointer Events] "touch-action: none" does not prevent double-tap-to-zoom
Antoine Quint
Reported 2019-07-08 04:34:57 PDT
[Pointer Events] "touch-action: none" does not prevent double-tap-to-zoom
Attachments
Patch (10.74 KB, patch)
2019-07-08 04:39 PDT, Antoine Quint
wenson_hsieh: review+
Antoine Quint
Comment 1 2019-07-08 04:39:20 PDT
Antoine Quint
Comment 2 2019-07-08 04:39:25 PDT
Antoine Quint
Comment 3 2019-07-08 11:00:41 PDT
Note You need to log in before you can comment on or make changes to this bug.