Source/WebKit/UIProcess/ios/WKTouchActionGestureRecognizer.mm
@@ -91,7 +91,10 @@
     if (_touchActionsByTouchIdentifier.isEmpty())
         return NO;
 
-    if (![_touchActionDelegate gestureRecognizerMayPinchToZoomWebView:preventedGestureRecognizer])
+    auto mayPinchToZoom = [_touchActionDelegate gestureRecognizerMayPinchToZoomWebView:preventedGestureRecognizer];
+    auto mayDoubleTapToZoom = [_touchActionDelegate gestureRecognizerMayDoubleTapToZoomWebView:preventedGestureRecognizer];
+
+    if (!mayPinchToZoom && !mayDoubleTapToZoom)
         return NO;
 
     // Now that we've established that this gesture recognizer may yield an interaction that is preventable by the "touch-action"
@@ -103,7 +106,10 @@
         auto iterator = _touchActionsByTouchIdentifier.find([touchIdentifier unsignedIntegerValue]);
         if (iterator != _touchActionsByTouchIdentifier.end() && [[activeTouches objectForKey:touchIdentifier].gestureRecognizers containsObject:preventedGestureRecognizer]) {
             // Pinch-to-zoom is only allowed if "pinch-zoom" or "manipulation" is specified.
-            if (!iterator->value.containsAny({ WebCore::TouchAction::PinchZoom, WebCore::TouchAction::Manipulation }))
+            if (mayPinchToZoom && !iterator->value.containsAny({ WebCore::TouchAction::PinchZoom, WebCore::TouchAction::Manipulation }))
+                return YES;
+            // Double-tap-to-zoom is only disallowed if "none" is specified.
+            if (mayDoubleTapToZoom && iterator->value.contains(WebCore::TouchAction::None))
                 return YES;
         }
     }
